<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="appName">Jdroid Sample Android</string>
	<string name="home">Home</string>

	<!-- Ads -->
	<string name="adMob">AdMob</string>
	<string name="display_interstitial">Display Interstitial</string>

	<!-- Image Loader -->
	<string name="universalImageLoader">Android Universal Image Loader</string>

	<!-- Exception Handling -->
	<string name="exceptionHandling">Exception Handling</string>

	<!-- Google Analytics -->
	<string name="googleAnalytics">Google Analytics</string>
	<string name="sendExampleEvent">Send Example Event</string>

	<!-- Google Cloud Messaging -->
	<string name="gcm">Google Cloud Messaging</string>

	<!-- Google Maps -->
	<string name="googleMaps">Google Maps</string>

	<!-- In App Billing -->
	<string name="inAppBilling">In App Billing</string>

	<!-- Merge Adapter -->
	<string name="mergeAdapter">Merge Adapter</string>

	<!-- Notifications -->
	<string name="notifications">Notifications</string>
	<string name="createNotification">Create Notification</string>
	<string name="cancelNotifications">Cancel Notifications</string>
	<string name="notificationTicker">Ticker example</string>
	<string name="notificationTitle">Title example</string>
	<string name="notificationDescription">Description example</string>

	<!-- Toasts -->
	<string name="toasts">Toasts</string>
	<string name="displayNormalToast">Display Normal Toast</string>
	<string name="displayInfoToast">Display Info Toast</string>
	<string name="displayWarningToast">Display Warning Toast</string>
	<string name="displayErrorToast">Display Error Toast</string>
	<string name="normalToastMessage">This is a normal Toast</string>
	<string name="infoToastMessage">This is an info Toast</string>
	<string name="warningToastMessage">This is a warning Toast</string>
	<string name="errorToastMessage">This is an error Toast</string>

	<!-- Loading -->
	<string name="loading">Loading &amp; Refresh</string>
	<string name="blockingLoading">Blocking Loading</string>
	<string name="defaultBlockingLoading">Default Blocking Loading</string>
	<string name="customBlockingLoading">Custom Blocking Loading</string>
	<string name="showLoading">Show Loading</string>
	<string name="dismissLoading">Dismiss Loading</string>
	<string name="nonBlockingLoading">Non Blocking Loading</string>
	<string name="swipeRefresLoading">Swipe Refresh Loading</string>

</resources>
