<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
	android:layout_height="match_parent" android:orientation="vertical" android:layout_margin="8dp">

	<Button android:id="@+id/normalToast" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal" android:text="@string/displayNormalToast" />
	<Button android:id="@+id/infoToast" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal" android:text="@string/displayInfoToast" />
	<Button android:id="@+id/warningToast" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal" android:text="@string/displayWarningToast" />
	<Button android:id="@+id/errorToast" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal" android:text="@string/displayErrorToast" />

</LinearLayout>
