<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
	android:layout_height="match_parent" android:orientation="vertical" android:layout_margin="8dp">

	<Button android:id="@+id/blockingLoading" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal" android:text="@string/defaultBlockingLoading" />

	<Button android:id="@+id/customBlockingLoading" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal" android:text="@string/customBlockingLoading" />

	<Button android:id="@+id/nonBlockingLoading" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal" android:text="@string/nonBlockingLoading" />

	<Button android:id="@+id/swipeRefresLoading" android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal" android:text="@string/swipeRefresLoading" />

</LinearLayout>
